# smartgateway

./: commands.txt  order-of-instantiation-of-processes.txt
codegen/: DistanceSensorObject.c  DistanceSensorObject.h  GyroSensorObject.c  GyroSensorObject.h  LightingObject.c  LightingObject.h  NotificationAgentObject.c  NotificationAgentObject.h  cmd  main.cpp  smartobject_codegen.cpp
codegen/input/: distance-sensor-interface.xml  light-sensor-interface.xml  notification-agent-dbus-interface.xml  sound-sensor-interface.xml  touch-sensor-interface.xml
codegen/template/: smartobject.c.template  smartobject.c.template.bak  smartobject.h.template  smartobject_main.template  smartobject_method.template  smartobject_method_body_dir_in.template  smartobject_method_body_dir_out.template  smartobject_method_decl.template
common/device_interface_files/: distance-sensor-interface.xml  gyro-sensor-interface.xml  light-sensor-interface.xml  lighting-dbus-interface.xml  sound-dbus-interface.xml  sound-sensor-interface.xml  temperature-sensor-interface.xml  touch-sensor-interface.xml
common/include/: common-defs.h
common/temp-code/: extract_params.cpp  extract_params.cpp.bak
context_manager/: ContextManager.cpp  ContextManager.hpp  ContextManagerObject.c  ContextManagerObject.h  DeviceCatalog.cpp  DeviceCatalog.hpp  Makefile  Makefile.am  Makefile.bak  Makefile.in  OntologyManager.cpp  OntologyManager.hpp  cmd_dbus_binding  cmd_error  config.status  configure  configure.ac  contextManager-dbus-interface.xml  contextManager-server-stub.h  main.cpp  url_utils.hpp
context_manager/.deps/: ContextManager.Po  ContextManagerObject.Po  DeviceCatalog.Po  OntologyManager.Po  QueryAgent.Po  QueryAgentObject.Po  main.Po  url_utils.Po
context_manager/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
data_manager/: CloudStorage.hpp  DataManager.cpp  DataManager.hpp  DataManagerObject.c  DataManagerObject.h  DevStorage.cpp  DevStorage.hpp  Makefile  Makefile.am  Makefile.in  QueryArgs.hpp  RdfStorage.cpp  RdfStorage.hpp  RdfStorage.hpp.bak  RingBufferStorage.cpp  RingBufferStorage.hpp  StorageSlot.hpp  TimeManager.cpp  TimeManager.hpp  cmd  config.status  configure  configure.ac  configure.scan  dataManager-dbus-interface.xml  dataManager-server-stub.h  main.cpp  outline.txt  squeue.cpp  squeue.hpp  test.cpp  test1.cpp  test2.cpp  thingspeak.h  ts_http.h  url_utils.hpp
data_manager/.deps/: DataManager.Po  DataManagerObject.Po  DevStorage.Po  RdfStorage.Po  RingBufferStorage.Po  TimeManager.Po  main.Po
data_manager/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
data_manager/iterator_version_backup/: RingBufferStorage.hpp  StorageSlot.hpp
device_manager/: Device.hpp  DeviceAgent.cpp  DeviceAgent.hpp  DeviceAgentObject.c  DeviceAgentObject.h  DeviceBase.cpp  DeviceBase.hpp  DeviceDbus.hpp  DeviceFactory.hpp  DistanceSensorDevice.cpp  DistanceSensorDevice.hpp  DistanceSensorObject.c  DistanceSensorObject.h  Event.cpp  Event.hpp  GyroSensorDevice.cpp  GyroSensorDevice.hpp  GyroSensorObject.c  GyroSensorObject.h  LightSensorDevice.hpp  LightSensorObject.c  LightSensorObject.h  LightingDevice.cpp  LightingDevice.cpp.bak  LightingDevice.hpp  LightingDevice.hpp.2jul  LightingDevice.hpp.bak  LightingObject.c  LightingObject.h  MPU6050.h  Makefile  Makefile.am  Makefile.am.2jul  Makefile.in  NotificationAgentDevice.cpp  NotificationAgentDevice.hpp  NotificationAgentObject.c  NotificationAgentObject.h  SoundDevice.hpp  SoundObject.c  (+60 more)
device_manager/.deps/: Device2GType.Po  DeviceAgent.Po  DeviceAgentObject.Po  DeviceBase.Po  DistanceSensorDevice.Po  DistanceSensorObject.Po  Event.Po  GyroSensorDevice.Po  GyroSensorObject.Po  LightSensorObject.Po  LightingDevice.Po  LightingObject.Po  NotificationAgentDevice.Po  NotificationAgentObject.Po  SoundObject.Po  SoundSensorObject.Po  Subscriber.Po  TemperatureSensorObject.Po  TouchSensorObject.Po  groveBuzzerDevice.Po  groveLightSensorDevice.Po  groveLightingDevice.Po  groveSoundSensorDevice.Po  groveTemperatureSensorDevice.Po  groveTouchSensorDevice.Po  ledLightingDevice.Po  main.Po  mainLighting.Po  testLightingDevice.Po  url_utils.Po
device_manager/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
http_rest_server/: Executor.cpp  Executor.hpp  MHD_config.h  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  RestAPI.cpp  RestAPI.hpp  aclocal.m4  build.sh  compile-home.sh  compile-lab.sh  config.status  configure  configure.ac  configure.ac.bak  httphandler.cpp  platform.h  plibc.h  strutil.cpp  strutil.hpp
http_rest_server/.deps/: DeviceCatalog.Po  Executor.Po  RestAPI.Po  httphandler.Po  strutil.Po
http_rest_server/autom4te.cache/: output.0  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
ppt/: Smartgateway-v1.pptx  Smartgateway-v3.pptx  Smartgateway-v4.pptx  Smartgateway-v5.pptx  Smartgateway-v6.pptx  content.txt
report/: SmartGateway-report-v1.odt  Thesis-Report-wordpad.odt  Thesis-Report.docx  Thesis-Report.odt
request_generator/: add_sub.c  cmd  command.c  data.c  event.c  ont.c  rule.c
rule_manager/: .RuleManagerObject.h.swp  Condition.hpp  Makefile  Makefile.am  Makefile.am.bak  Makefile.amm  Makefile.in  Makefile.rule_manager.bak  Rule.cpp  Rule.hpp  RuleManager.Po  RuleManager.cpp  RuleManager.hpp  RuleManagerObject.c  RuleManagerObject.h  cmd  config.guess  config.status  config.sub  configure  configure.ac  main.Po  main.cpp  ruleManager-dbus-interface.xml  ruleManager-server-stub.h  url_utils.cpp
rule_manager/.deps/: Rule.Po  RuleManager.Po  RuleManagerObject.Po  main.Po  url_utils.Po
rule_manager/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
